--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href = "css/css.css" rel ="stylesheet" type = "text/css"/>
 </head>
 <body>
+	<a href="EX01.html">打开一个名为123的文本文档</a>
 	<table id="t1">
 		<tr>
 			<td><img src="http://img.cankaoxiaoxi.com/templates/cankaoxiaoxi/css/images/logo0728.png" alt="参考消息"></td>
