--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +7,7 @@
 	<link href = "css/css.css" rel ="stylesheet" type = "text/css"/>
 </head>
 <body>
+	<a href="EX01.html">打开一个名为123的文本文档</a>
 	<table id="t1">
 		<tr>
 			<td><img src="http://img.cankaoxiaoxi.com/templates/cankaoxiaoxi/css/images/logo0728.png" alt="参考消息"></td>
@@ -144,3 +146,5 @@
 	</table>
 </body>
 </html>
+Contact GitHub API Training Shop Blog About
+© 2017 GitHub, Inc. Terms Privacy Security Status Help
