--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<center>
 		<h1>web实验作业</h1>
-		<a href="EX03/demo.html">EX03</a>
+		<a href="demo.html">EX03</a>
 	</center>
 </body>
 </html>
