--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<center>
 		<h1>web实验作业</h1>
 		<a href="EX03/demo.html">EX03</a>
+		<a href="EX04/index.html">EX04</a>
 	</center>
 </body>
 </html>
