--- a/EX04/index.html
+++ b/EX04/index.html
@@ -6,6 +6,49 @@
 	<link href = "index.css" rel ="stylesheet" type = "text/css"/>
 </head>
 <body>
+	<div class="ui-content">
+		<div class="ui-content-1">
+			<div class="ui-content-1-left">
+				<div class="bigsquare"></div>
+				<div class="bigsquare"></div>
+				<div class="bigsquare"></div>
+				<div class="bigsquare"></div>
+			</div>
+			<div class="ui-content-1-right">
+				<div class="bigsquare"></div>
+			</div>
+		</div>
+		<div class="ui-content-2">
+			<div class="ui-content-2-left">
+				<div class="left-top">
+					<div class="bigrectangle"></div>
+				</div>
+				<div class="left-down">
+					<div class="space"></div>
+					<div class="space-then">
+						<div class="smallsquare"></div>
+						<div class="smallsquare"></div>
+						<div class="smallsquare"></div>
+					</div>
+					<div class="space"></div>
+				</div>
+			</div>
+			<div class="ui-content-2-right">
+				<div class="right-top"></div>
+				<div class="right-down">
+					<div class="smallrectangle"></div>
+					<div class="smallrectangle"></div>
+					<div class="smallrectangle"></div>
+					<div class="smallrectangle"></div>
+					<div class="smallrectangle"></div>
+					<div class="smallrectangle"></div>
+					<div class="smallrectangle"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 	<div class="ui-main">
 		<div class="ui-main-head"></div>	
 		<div class="ui-main-foot">
@@ -20,5 +63,99 @@
 			</div>
 		</div>
 	</div>
+
+
+	<div class="ui-container">
+		<div class="ui-main">
+			<div class="ui-main-head"></div>	
+			<div class="ui-main-foot">
+				<div class="ui-1">标题文字</div>
+				<div class="ui-2">具体信息</div>
+				<div class="ui-3">
+					<div class="ui-3-1">
+						<div class="ui-3-1-m1">实际价格</div>
+						<div class="ui-3-1-m2">￥原价XX.00</div>
+					</div>
+					<div class="ui-3-2">XXX</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="ui-main">
+			<div class="ui-main-head"></div>	
+			<div class="ui-main-foot">
+				<div class="ui-1">标题文字</div>
+				<div class="ui-2">具体信息</div>
+				<div class="ui-3">
+					<div class="ui-3-1">
+						<div class="ui-3-1-m1">实际价格</div>
+						<div class="ui-3-1-m2">￥原价XX.00</div>
+					</div>
+					<div class="ui-3-2">XXX</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="ui-main">
+			<div class="ui-main-head"></div>	
+			<div class="ui-main-foot">
+				<div class="ui-1">标题文字</div>
+				<div class="ui-2">具体信息</div>
+				<div class="ui-3">
+					<div class="ui-3-1">
+						<div class="ui-3-1-m1">实际价格</div>
+						<div class="ui-3-1-m2">￥原价XX.00</div>
+					</div>
+					<div class="ui-3-2">XXX</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="ui-main">
+			<div class="ui-main-head"></div>	
+			<div class="ui-main-foot">
+				<div class="ui-1">标题文字</div>
+				<div class="ui-2">具体信息</div>
+				<div class="ui-3">
+					<div class="ui-3-1">
+						<div class="ui-3-1-m1">实际价格</div>
+						<div class="ui-3-1-m2">￥原价XX.00</div>
+					</div>
+					<div class="ui-3-2">XXX</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="ui-main">
+			<div class="ui-main-head"></div>	
+			<div class="ui-main-foot">
+				<div class="ui-1">标题文字</div>
+				<div class="ui-2">具体信息</div>
+				<div class="ui-3">
+					<div class="ui-3-1">
+						<div class="ui-3-1-m1">实际价格</div>
+						<div class="ui-3-1-m2">￥原价XX.00</div>
+					</div>
+					<div class="ui-3-2">XXX</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="ui-main">
+			<div class="ui-main-head"></div>	
+			<div class="ui-main-foot">
+				<div class="ui-1">标题文字</div>
+				<div class="ui-2">具体信息</div>
+				<div class="ui-3">
+					<div class="ui-3-1">
+						<div class="ui-3-1-m1">实际价格</div>
+						<div class="ui-3-1-m2">￥原价XX.00</div>
+					</div>
+					<div class="ui-3-2">XXX</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 </body>
 </html>
