--- a/EX03/index.html
+++ b/EX03/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Document</title>
-		<link href = "demo.css" rel ="stylesheet" type = "text/css"/>
+		<link href = "index.css" rel ="stylesheet" type = "text/css"/>
 	</head>
 	<body>
 		<center>
@@ -15,26 +15,26 @@
 					<div class="b0">安全</div>
 					<div class="b0">公益</div>
 				</div>
-				<div class="p1 frame1">write here</div>
-				<div class="p2 frame1">write here</div>
+				<div class="p1 frame1"></div>
+				<div class="p2 frame1"></div>
 			</div>
 			<div class="second frame2">
 				<div>
 					<img src="" class="pit">
-					<div class="s2f frame1">write here</div>
-					<div class="s2t frame1">write here</div>
+					<div class="s2f frame1"></div>
+					<div class="s2t frame1"></div>
 				</div>
 				<div class="same">
-					<div class="p3 frame1">登陆</div>
-					<div class="p3 frame1">免费注册</div>
-					<div class="p3 frame1">免费开店</div>
+					<div class="p3">登陆</div>
+					<div class="p3">免费注册</div>
+					<div class="p3">免费开店</div>
 				</div>
 			</div>
 			<div class="third frame2">
-				<div class="pp frame1">please write here</div>
+				<div class="pp frame1"></div>
 			</div>
 			
-			<div class="fourth frame2">
+			<div class="fourth frame3">
 				<div class="big border1">
 					<img src="" class="bigpit">
 					<div>充话费</div>
