--- a/EX04/index.html
+++ b/EX04/index.html
@@ -50,7 +50,7 @@
 	</div>
 
 
-	<div class="ui-main">
+	<div class="ui-main" style="border: solid 1px black;">
 		<div class="ui-main-head"></div>	
 		<div class="ui-main-foot">
 			<div class="ui-1">标题文字</div>
@@ -60,7 +60,7 @@
 					<div class="ui-3-1-m1">实际价格</div>
 					<div class="ui-3-1-m2">￥原价XX.00</div>
 				</div>
-				<div class="ui-3-2">XXX</div>
+				<div class="ui-3-2">XXX </div>
 			</div>
 		</div>
 	</div>
@@ -70,18 +70,18 @@
 		<div class="ui-main">
 			<!-- <div class="ui-main-head"></div>	 -->
 			<img src="pit/p1.png" class="ui-main-head">
-			<div class="ui-main-foot">
-				<div class="ui-1">迪士尼品牌 气质之选 时尚百搭</div>
-				<div class="ui-2">
+			<div class="ui-main-foot whiteback">
+				<div class="ui-1 solidwidth">迪士尼品牌 气质之选 时尚百搭</div>
+				<div class="ui-2 solidwidth">
 					<div>爆款推荐 满减优惠</div>
-					<div style="color: black">【迪士尼】正品韩国学生女士...</div>
+					<div class="backbold">[迪士尼]正品韩国学生女士...</div>
 				</div>
-				<div class="ui-3">
+				<div class="ui-3 solidwidth">
 					<div class="ui-3-1">
 						<div class="ui-3-1-m1">102</div>
 						<div class="ui-3-1-m2">￥298.00</div>
 					</div>
-					<div class="ui-3-2">301</div>
+					<div class="ui-3-2">301 </div>
 				</div>
 			</div>
 		</div>
@@ -89,18 +89,18 @@
 		<div class="ui-main">
 			<!-- <div class="ui-main-head"></div>	 -->
 			<img src="pit/p2.png" class="ui-main-head">	
-			<div class="ui-main-foot">
-				<div class="ui-1">大方简洁 绣花点缀 款式简介易搭</div>
-				<div class="ui-2">
+			<div class="ui-main-foot whiteback">
+				<div class="ui-1 solidwidth">大方简洁 绣花点缀 款式简介易搭</div>
+				<div class="ui-2 solidwidth">
 					<div>聚划算分享 200 mdash：20</div>
-					<div style="color: black">【INMAN、茵曼】聚...</div>
+					<div class="backbold">[INMAN、茵曼]聚...</div>
 				</div>
-				<div class="ui-3">
+				<div class="ui-3 solidwidth">
 					<div class="ui-3-1">
 						<div class="ui-3-1-m1">149</div>
 						<div class="ui-3-1-m2">￥319.00</div>
 					</div>
-					<div class="ui-3-2">56</div>
+					<div class="ui-3-2">56 </div>
 				</div>
 			</div>
 		</div>
@@ -108,18 +108,18 @@
 		<div class="ui-main">
 			<!-- <div class="ui-main-head"></div>	 -->
 			<img src="pit/p3.png" class="ui-main-head">
-			<div class="ui-main-foot">
-				<div class="ui-1">安卓4.4系统 12核顶配 天猫单品冠军</div>
-				<div class="ui-2">
+			<div class="ui-main-foot whiteback">
+				<div class="ui-1 solidwidth">安卓4.4系统 12核顶配 天猫单品冠军</div>
+				<div class="ui-2 solidwidth">
 					<div>直降300元 抽免单</div>
-					<div style="color: black">小帅私人影院 高清家用 微型...</div>
+					<div class="backbold">小帅私人影院 高清家用 微型...</div>
 				</div>
-				<div class="ui-3">
+				<div class="ui-3 solidwidth">
 					<div class="ui-3-1">
 						<div class="ui-3-1-m1">999</div>
 						<div class="ui-3-1-m2">￥1999.00</div>
 					</div>
-					<div class="ui-3-2">711</div>
+					<div class="ui-3-2">711 </div>
 				</div>
 			</div>
 		</div>
@@ -127,18 +127,18 @@
 		<div class="ui-main">
 			<!-- <div class="ui-main-head"></div>	 -->
 			<img src="pit/p4.png" class="ui-main-head">
-			<div class="ui-main-foot">
-				<div class="ui-1">12级美颜相机 长焦自拍翻屏 延时摄影功能</div>
-				<div class="ui-2">
+			<div class="ui-main-foot whiteback">
+				<div class="ui-1 solidwidth">12级美颜相机 长焦自拍翻屏 延时摄影功能</div>
+				<div class="ui-2 solidwidth">
 					<div>送16G卡相机包自拍杆</div>
-					<div style="color: black">新品首发 Casio/卡西欧...</div>
+					<div class="backbold">新品首发 Casio/卡西欧...</div>
 				</div>
-				<div class="ui-3">
+				<div class="ui-3 solidwidth">
 					<div class="ui-3-1">
 						<div class="ui-3-1-m1">2799</div>
 						<div class="ui-3-1-m2">￥2800.00</div>
 					</div>
-					<div class="ui-3-2">33</div>
+					<div class="ui-3-2">33 </div>
 				</div>
 			</div>
 		</div>
@@ -146,18 +146,18 @@
 		<div class="ui-main">
 			<!-- <div class="ui-main-head"></div>	 -->
 			<img src="pit/p5.png" class="ui-main-head">
-			<div class="ui-main-foot">
-				<div class="ui-1">100%纯棉 3万妈妈好评 100码-160码</div>
-				<div class="ui-2">
+			<div class="ui-main-foot whiteback">
+				<div class="ui-1 solidwidth">100%纯棉 3万妈妈好评 100码-160码</div>
+				<div class="ui-2 solidwidth">
 					<div>优惠券：200减30</div>
-					<div style="color: black">【班比纳】100码-160码儿童...</div>
+					<div class="backbold">[班比纳]100码-160码儿童...</div>
 				</div>
-				<div class="ui-3">
+				<div class="ui-3 solidwidth">
 					<div class="ui-3-1">
 						<div class="ui-3-1-m1">22</div>
 						<div class="ui-3-1-m2">￥64.00</div>
 					</div>
-					<div class="ui-3-2">30006</div>
+					<div class="ui-3-2">30006 </div>
 				</div>
 			</div>
 		</div>
@@ -165,18 +165,18 @@
 		<div class="ui-main">
 			<!-- <div class="ui-main-head"></div>	 -->
 			<img src="pit/p6.png" class="ui-main-head">
-			<div class="ui-main-foot">
-				<div class="ui-1">夏季首发 设计师推荐 人手必备</div>
-				<div class="ui-2">
+			<div class="ui-main-foot whiteback">
+				<div class="ui-1 solidwidth">夏季首发 设计师推荐 人手必备</div>
+				<div class="ui-2 solidwidth">
 					<div>厂家直供价</div>
-					<div style="color: black">【可可魅】欧美雪纺小吊带背心雪纺衫</div>
+					<div class="backbold">[可可魅]欧美雪纺小吊带背心雪纺衫</div>
 				</div>
-				<div class="ui-3">
+				<div class="ui-3 solidwidth">
 					<div class="ui-3-1">
 						<div class="ui-3-1-m1">29</div>
 						<div class="ui-3-1-m2">￥159.00</div>
 					</div>
-					<div class="ui-3-2">19648</div>
+					<div class="ui-3-2">19648 </div>
 				</div>
 			</div>
 		</div>
