--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<center>
 		<h1>web实验作业</h1>
 		<a href="EX03/index.html">EX03</a>
-		<div></div>
+		<div style="height: 10px;"></div>
 		<a href="EX04/index.html">EX04</a>
 	</center>
 </body>
