--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<a href="EX03/index.html">EX03</a>
 		<div style="height: 10px;"></div>
 		<a href="EX04/index.html">EX04</a>
+		<div style="height: 10px;"></div>
+		<a href="EX05/index.html">EX05</a>
 	</center>
 </body>
 </html>
