--- a/EX05/index.html
+++ b/EX05/index.html
@@ -47,11 +47,28 @@
 			<div class="navigation bac"></div>
 			<div class="navigation"></div>
 			<div class="navigation bor"></div>
-			<div class="content-down">1</div>
+			<div class="content-1-down">1</div>
 		</div>
 
 		<div class="content-2">
-			
+			<div class="content-top">
+				<div class="content-line">
+					<div class="number">1</div>
+					<div class="emp"></div>
+					<div class="delete">Delete</div>
+				</div>
+				<div class="content-line">
+					<div class="number">2</div>
+					<div class="emp"></div>
+					<div class="delete">Delete</div>
+				</div>
+				<div class="content-line">
+					<div class="number">3</div>
+					<div class="emp"></div>
+					<div class="delete">Delete</div>
+				</div>
+			</div>
+			<div class="content-2-down">添加</div>
 		</div>
 	</div>
 </center>
