--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<div style="height: 10px;"></div>
 		<a href="EX04/index.html">EX04</a>
 		<div style="height: 10px;"></div>
+		<a href="EX05/index.html">EX05</a>
+		<div style="height: 10px;"></div>
 		<a href="EX06/index.html">EX06</a>
 	</center>
 </body>
