--- a/EX05/index.html
+++ b/EX05/index.html
@@ -17,43 +17,114 @@
 				<div class="blueline"></div>
 				<div class="mid-text">
 					<div class="text-top">
-						<div>08:43発</div>
-						<i class="fa fa-long-arrow-right pos1"></i>
-						<div>09:43着</div>
-						<div class="text-444 pos2">總額</div>
-						<div>6,560円</div>
+						<div>08:43発→09:43着</div>
+						<div class="text-top-1">6,560円</div>
 					</div>
 					<div class="text-down">
-						<div class="text-down-block1">
-							<div class="text-444">所要时间</div>
-							<div class="text-red">1時間0分</div>
-						</div>
-						<div class="text-down-block2">
-							<div class="text-444">乘车时间</div>
-							<div class="text-000">54分</div>
-						</div>
-						<div class="text-down-block3">
-							<div class="text-444">乘換</div>
-							<div class="text-red">1回</div>
-						</div>
-						<div class="text-down-block4">
-							<div class="text-444">距离</div>
-							<div class="text-000">190.4km</div>
-						</div>
+						<div class="text-down-block1">1時間0分</div>
+						<div class="text-down-block2">54分</div>
+						<div class="text-down-block3">1回</div>
+						<div class="text-down-block4">190.4km</div>
 					</div>
 				</div>
 			</div>
 			<div class="main-1-down">
-				<i class="fa fa-print pos3"></i>
-				<div class="color-002cbd">打印</div>
-				<i class="fa fa-file-text-o pos3"></i>
-				<div class="color-002cbd">详单</div>
+				<i class="fa fa-print pos"></i>
+				<a href="#">打印</a>
+				<i class="fa fa-file-text-o pos"></i>
+				<a href="#">详单</a>
 			</div>
 		</div>
 		<div class="main-2">
-			<div></div>
-			<div></div>
-			<div></div>
+			<div class="main-2-title">
+				<div class="main-2-title-1">经路</div>
+				<div class="main-2-title-2">乘车位置</div>
+				<div class="main-2-title-3">费用</div>
+				<div class="main-2-title-4">指定席/费用</div>
+				<div class="main-2-title-5">距离</div>
+			</div>
+			<div class="main-2-body border1">
+				<div class="main-2-body-name">
+					<i class="fa fa-cloud"></i>
+					<div class="square"></div>
+					<div>名古屋</div>
+				</div>
+				<div class="main-2-body-num">17番線発</div>
+				<div class="main-2-body-nation">
+					<a href="#">时刻表</a>
+					<a href="#">车站图</a>
+					<a href="#">线路图</a>
+					<a href="#">地图</a>
+				</div>
+			</div>
+			<div class="main-2-train">
+				<div class="main-2-train-time">
+					<div><strong>08:43-09:33</strong><br>50分</div>
+				</div>
+				<div class="main-2-train-rec">
+					<div class="main-2-train-rectop">
+						<div class="main-2-train-littlerec"></div>
+						<div class="main-2-train-littlerec"></div>
+					</div>
+					<div class="main-2-train-recdown"></div>
+				</div>
+				<div class="main-2-train-news">
+					<img src="pit/train1.png">
+					<a href="#">のぞみ203号(新大阪行)</a>
+				</div>
+				<div class="main-2-train-nation">
+					<div class="main-2-train-nation-1"></div>
+					<div class="main-2-train-nation-2">3,350円</div>
+					<div class="main-2-train-nation-3"><div>指定席<br>3,210円</div></div>
+					<div class="main-2-train-nation-4">186.6km</div>
+				</div>
+			</div>
+			<div class="main-2-body">
+				<div class="main-2-body-name">
+					<div class="main-2-body-time">(6分)</div>
+					<div class="littlesquare"></div>
+					<div>新大阪</div>
+				</div>
+				<div class="main-2-body-num">23番線着<br>16番線発</div>
+				<div class="main-2-body-nation">
+					<a href="#">时刻表</a>
+					<a href="#">车站图</a>
+					<a href="#">线路图</a>
+					<a href="#">地图</a>
+				</div>
+			</div>
+			<div class="main-2-train">
+				<div class="main-2-train-time">
+					<div><strong>09:39-09:43</strong><br>4分</div>
+				</div>
+				<div class="main-2-train-rec">
+					<div class="main-2-train-littlerec"></div>
+					<div class="main-2-train-littlerec"></div>
+					</div>
+				<div class="main-2-train-news">
+					<img src="pit/train2.png">
+					<a href="#">JR京都線新快速(姬路行)</a>
+				</div>
+				<div class="main-2-train-nation">
+					<div class="main-2-train-nation-1"></div>
+					<div class="main-2-train-nation-2">↓</div>
+					<div class="main-2-train-nation-3"></div>
+					<div class="main-2-train-nation-4">3.8km</div>
+				</div>
+			</div>
+			<div class="main-2-body">
+				<div class="main-2-body-name">
+					<i class="fa fa-cloud"></i>
+					<div class="square"></div>
+					<div>大阪</div>
+				</div>
+				<div class="main-2-body-num">5番線着</div>
+				<div class="main-2-body-nation">
+					<a href="#">车站图</a>
+					<a href="#">线路图</a>
+					<a href="#">地图</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
