--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<a href="EX05/index.html">EX05</a>
 		<div style="height: 10px;"></div>
 		<a href="EX06/index.html">EX06</a>
+		<div style="height: 10px;"></div>
+		<a href="EX07/index.html">EX07</a>
 	</center>
 </body>
 </html>
