--- a/EX07/index.html
+++ b/EX07/index.html
@@ -187,7 +187,9 @@
 			</div>
 		</div>
 		<div class="ui-pc">
-			
+			<div class="container-fluid">
+				
+			</div>
 		</div>
 		<script type="text/javascript" src="./jquery.js"></script>
 		<script type="text/javascript" src="./js/bootstrap.js"></script>
