--- a/EX07/index.html
+++ b/EX07/index.html
@@ -188,7 +188,137 @@
 		</div>
 		<div class="ui-pc">
 			<div class="container-fluid">
-				
+				<div class="row ui-pc-main">
+					<div class="col-md-12 col-sm-12 col-xs-12 ui-pc-top">
+						<div class="row ui-pc-top-first">
+							<div>登录</div>
+							<span class="ui-pc-top-firsttext"></span>
+							<div>注册</div>
+						</div>
+						<div class="row ui-pc-top-second">
+							<div class="col-md-5 col-sm-5 col-xs-5">
+								<div class="row">
+									<div class="ui-pc-top-title">
+										<div class="ui-pc-top-title-re">首页</div>
+										<div>讲座
+										<i class="fa fa-caret-down"></i></div>
+										<div>悦读</div>
+										<div>创意榜</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-7 col-sm-7 col-xs-7">
+								<div class="row">
+									<div class="pull-right ui-pc-top-input">
+										<div class="ui-pc-top-input-left">文章
+											<i class="fa fa-caret-down"></i>
+										</div>
+										<div class="ui-pc-top-input-right">
+											<i class="fa fa-search"></i>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row ui-pc-body-top">
+					<div class="col-md-8 col-sm-8 col-xs-8">
+						<div class="ui-pc-body-top-left"></div>
+					</div>
+					<div class="col-md-4 col-sm-4 col-xs-4">
+						<div class="ui-pc-body-top-right">
+							<div class="ui-pc-body-top-right-head">
+								<div class="ui-pc-body-top-head-text">XXXXXXXXXXXXXXXXXXX</div>
+								<div class="ui-pc-body-top-head-re"></div>
+							</div>
+							<div class="ui-pc-body-top-right-foot">
+								<div class="ui-pc-body-top-ims">
+									<div class="ui-pc-body-top-im">
+										<div class="ui-pc-body-top-im-num">330</div>
+										<div class="ui-pc-body-top-im-text">XXXX</div>
+									</div>
+									<div class="ui-pc-body-top-im">
+										<div class="ui-pc-body-top-im-num">280</div>
+										<div class="ui-pc-body-top-im-text">XXXX</div>
+									</div>
+									<div class="ui-pc-body-top-im">
+										<div class="ui-pc-body-top-im-num">650</div>
+										<div class="ui-pc-body-top-im-text">XXXX</div>
+									</div>
+									<div class="ui-pc-body-top-im">
+										<div class="ui-pc-body-top-im-num">1144</div>
+										<div class="ui-pc-body-top-im-text">XXXX</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row ui-pc-body-down">
+					<div class="col-md-8 col-sm-8 col-xs-8">
+						
+					</div>
+					<div class="col-md-4 col-sm-4 col-xs-4">
+						<div class="row">
+							<div class="col-md-12 col-sm-12 col-xs-12">
+								<span class="ui-pc-body-down-right-title1">XXXX</span>
+								<span class="pull-right">
+									<span class="ui-pc-body-down-right-title2">更多 ></span>
+								</span>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12 col-sm-12 col-xs-12">
+								<div class="ui-pc-body-down-right1">
+									<div class="ui-pc-right-bigsquare"></div>
+									<div class="ui-pc-body-down-right1-title">XXXXXXXXXXXXXXXX</div>
+									<div class="ui-pc-body-down-right1-time">4月9日 13:00 - 18:00</div>
+									<div class="ui-pc-body-down-right1-note">XXXXXXXXXXXXXXXXXXXXXXXXXXXX</div>
+									<div class="ui-pc-body-down-right1-num">
+										<div>2人已报名</div>
+										<div class="linepos">丨</div>
+										<div>2人关注</div>
+									</div>
+									<div class="start">即将开始</div>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12 col-sm-12 col-xs-12">
+								<div class="ui-pc-body-down-right1">
+									<div class="ui-pc-right-bigsquare"></div>
+									<div class="ui-pc-body-down-right1-title">XXXXXXXXXXXXXXXX</div>
+									<div class="ui-pc-body-down-right1-time">4月21日 9:15 - 4月23日 17:25</div>
+									<div class="ui-pc-body-down-right1-note">XXXXXXXXXXXXXXXXXX</div>
+									<div class="ui-pc-body-down-right1-num">
+										<div>2人已报名</div>
+										<div class="linepos">丨</div>
+										<div>0人关注</div>
+									</div>
+									<div class="start">即将开始</div>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12 col-sm-12 col-xs-12">
+								<div class="ui-pc-body-down-rightdown">
+									<div class="ui-pc-body-down-right2">
+										<span class="ui-pc-body-down-right-title1">XXXXX<span class="ui-pc-body-down-right-title3">XXX</span></span>
+										<span class="pull-right">
+											<span class="ui-pc-body-down-right-title2">更多 ></span>
+										</span>
+									</div>
+									<div class="ui-pc-body-down-right3">
+										<div class="ui-pc-body-down-right3-re">
+											<div class="ui-pc-body-down-right3-re-re">第128期</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<script type="text/javascript" src="./jquery.js"></script>
