--- a/EX07/index.html
+++ b/EX07/index.html
@@ -257,7 +257,178 @@
 				</div>
 				<div class="row ui-pc-body-down">
 					<div class="col-md-8 col-sm-8 col-xs-8">
-						
+						<div class="row">
+							<div class="col-md-12 col-sm-12 col-xs-12">
+								<span class="ui-pc-body-down-left-title1">XXXXX</span>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-8 col-sm-8 col-xs-8">
+								<div class="ui-pc-body-down-left1-1">
+									<div class="ui-pc-body-down-left1-im">
+										<div class="ui-pc-body-down-left1-im-title">XXXXXXXXXXXXXXXXXXXXXXXXX</div>
+										<div class="ui-pc-body-down-left1-im-note">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</div>
+									</div>
+									<div class="ui-pc-body-down-left-num">
+										<div>772阅读</div>
+										<div class="linepos">丨</div>
+										<div>0讨论</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4 col-sm-4 col-xs-4">
+								<div class="ui-pc-body-down-left1-2">
+									<div class="ui-pc-body-down-left1-2-pit"></div>
+									<div class="ui-pc-body-down-left1-2-note">XXXXXXXXXXXXXXX</div>
+									<div class="ui-pc-body-down-left1-2-num">
+										<div>3376阅读</div>
+										<div class="linepos">丨</div>
+										<div>2讨论</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-4 col-sm-4 col-xs-4">
+								<div class="ui-pv-body-down-left2-1">
+									<div class="ui-pc-body-down-left1-2-pit"></div>
+									<div class="ui-pc-body-down-left2-ppt">PPT</div>
+									<div class="ui-pc-body-down-left2-note">XXXXXXXXXXXXXXXX</div>
+									<div class="ui-pc-body-down-left2-num">
+										<div>34839阅读</div>
+										<div class="linepos">丨</div>
+										<div>250下载</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4 col-sm-4 col-xs-4">
+								<div class="ui-pv-body-down-left2-2">
+									<div class="ui-pc-body-down-left1-2-pit"></div>
+									<div class="ui-pc-body-down-left2-ppt">PPT</div>
+									<div class="ui-pc-body-down-left2-note">XXXXXXXXXXXXXXXX</div>
+									<div class="ui-pc-body-down-left2-num">
+										<div>35545阅读</div>
+										<div class="linepos">丨</div>
+										<div>160下载</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4 col-sm-4 col-xs-4">
+								<div class="ui-pv-body-down-left2-3">
+									<div class="ui-pc-body-down-left1-2-pit"></div>
+									<div class="ui-pc-body-down-left2-ppt">PPT</div>
+									<div class="ui-pc-body-down-left2-note">XXXXXXXXXXXXXXXX</div>
+									<div class="ui-pc-body-down-left2-num">
+										<div>39636阅读</div>
+										<div class="linepos">丨</div>
+										<div>317下载</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6 col-sm-6 col-xs-6">
+								<div class="ui-pc-body-down-left3-1">
+									<div class="ui-pc-body-down-left3-pit"></div>
+									<div class="ui-pc-body-down-left3-note">XXXXXXXXXXXXXX</div>
+									<div class="ui-pc-body-down-left3-num">
+										<div>3614阅读</div>
+										<div class="linepos">丨</div>
+										<div>1讨论</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 col-sm-6 col-xs-6">
+								<div class="ui-pc-body-down-left3-2">
+									<div class="ui-pc-body-down-left3-pit"></div>
+									<div class="ui-pc-body-down-left3-note">XXXXXXXXXXXXXX</div>
+									<div class="ui-pc-body-down-left3-num">
+										<div>3528阅读</div>
+										<div class="linepos">丨</div>
+										<div>5讨论</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-4 col-sm-4 col-xs-4">
+								<div class="ui-pc-body-down-left4-1">
+									<div class="ui-pc-body-down-left1-2-pit">
+										<i class="fa fa-play-circle-o fa-lg"></i>
+									</div>
+									<div class="ui-pc-body-down-left1-2-note">XXXXXXXXXXXXXXX</div>
+									<div class="ui-pc-body-down-left1-2-num">
+										<div>849播放</div>
+										<div class="linepos">丨</div>
+										<div>0讨论</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4 col-sm-4 col-xs-4">
+								<div class="ui-pc-body-down-left4-2">
+									<div class="ui-pc-body-down-left1-2-pit">
+										<i class="fa fa-play-circle-o fa-lg"></i>
+									</div>
+									<div class="ui-pc-body-down-left1-2-note">XXXXXXXXXXXXXXX</div>
+									<div class="ui-pc-body-down-left1-2-num">
+										<div>794播放</div>
+										<div class="linepos">丨</div>
+										<div>0讨论</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4 col-sm-4 col-xs-4">
+								<div class="ui-pc-body-down-left4-3">
+									<div class="ui-pc-body-down-left1-2-pit">
+										<i class="fa fa-play-circle-o fa-lg"></i>
+									</div>
+									<div class="ui-pc-body-down-left1-2-note">XXXXXXXXXXXXXXX</div>
+									<div class="ui-pc-body-down-left1-2-num">
+										<div>729播放</div>
+										<div class="linepos">丨</div>
+										<div>0讨论</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-4 col-sm-4 col-xs-4">
+								<div class="ui-pc-body-down-left4-1">
+									<div class="ui-pc-body-down-left1-2-pit">
+									</div>
+								</div>
+							</div>
+							<div class="col-md-8 col-sm-8 col-xs-8">
+								<div class="ui-pc-body-down-left5-1">
+									<div class="ui-pc-body-down-left5-im">
+										<div class="ui-pc-body-down-left5-line"></div>
+										<div class="ui-pc-body-down-left5-im-title">XXXXXXXXXXXXXXXXXXXXXXXXX</div>
+										<div class="ui-pc-body-down-left5-im-note">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</div>
+									</div>
+									<div class="ui-pc-body-down-left5-num">
+										<div>3276阅读</div>
+										<div class="linepos">丨</div>
+										<div>2讨论</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12 col-sm-12 col-xs-12">
+								<div class="ui-pc-body-down-left6">
+									<div class="ui-pc-body-down-left6-im">
+										<div class="ui-pc-body-down-left5-line"></div>
+										<div class="ui-pc-body-down-left5-im-title">XXXXXXXXXXXXXXXXXXXXXXXXX</div>
+										<div class="ui-pc-body-down-left5-im-note">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</div>
+									</div>
+									<div class="ui-pc-body-down-left6-num">
+										<div>4006阅读</div>
+										<div class="linepos">丨</div>
+										<div>13讨论</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="col-md-4 col-sm-4 col-xs-4">
 						<div class="row">
