--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<a href="EX06/index.html">EX06</a>
 		<div style="height: 10px;"></div>
 		<a href="EX07/index.html">EX07</a>
+		<div style="height: 10px;"></div>
+		<a href="https://github.com/smoothiefrog/Factorywebsite/blob/master/index.html">dazuoye</a>
 	</center>
 </body>
 </html>
