--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div style="height: 10px;"></div>
 		<a href="EX07/index.html">EX07</a>
 		<div style="height: 10px;"></div>
-		<a href="https://github.com/smoothiefrog/Factorywebsite/blob/master/index.html">dazuoye</a>
+		<a href="EX09/index.html">EX09</a>
 	</center>
 </body>
 </html>
