--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		<a href="EX07/index.html">EX07</a>
 		<div style="height: 10px;"></div>
 		<a href="EX09/index.html">EX09</a>
+		<div style="height: 10px;"></div>
+		<a href="https://github.com/smoothiefrog/Factorywebsite/blob/master/index.html">大作业</a>
 	</center>
 </body>
 </html>
