--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div style="height: 10px;"></div>
 		<a href="EX09/index.html">EX09</a>
 		<div style="height: 10px;"></div>
-		<a href="https://github.com/smoothiefrog/Factorywebsite/blob/master/index.html">大作业</a>
+		<a href="https://github.com/smoothiefrog/Factorywebsite">大作业</a>
 	</center>
 </body>
 </html>
